v0.01.85
更新

部門諮詢AI : 優化 問答結構
部門諮詢AI : 添加 廠內生產部分對應欄位 對答問題
部門諮詢AI : 添加 產品規格 對答問題
部門諮詢AI : 添加 新增對答紀錄
部門諮詢AI : 添加 向量索引資料庫 作為推測使用
部門諮詢AI : 添加 圖像配對機制(尚未開放)
部門諮詢AI : 添加 語音 對話解析
部門諮詢AI : 移除 AI 外部鏈結(改為DTR自行架設AI)

倉庫管理 : 修正 入料單 偵測:時間修改->檢核時間
倉庫管理 : 修正 查詢 入料/領料單號 由開頭比對
倉庫管理 : 添加 A118 入料單類型
倉庫管理 : 修正 All Pass 入料類型單據判斷異常失效

群組管理 : 添加 排序功能單元

系統查詢模組 : 修正 檔案/圖片格式 (可支援查詢後下載)
系統異常模組 : 修正 W1002提示資訊 可帶入資料
系統API AI : 添加 串聯 AI Service